--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "requests>=2.31.0",
     "beautifulsoup4>=4.12.0",
     "psycopg2-binary>=2.9.9",
+    "gunicorn>=21.2.0",
 ]
