--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,5 @@ dependencies = [
     "beautifulsoup4>=4.12.0",
     "psycopg2-binary>=2.9.9",
     "gunicorn>=21.2.0",
+    "qrcode[pil]>=7.4.2",
 ]
