feat: implemented the forgot password flow

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ RATELIMIT_DEFAULT=100 per hour
 
 # Caching
 CACHE_TYPE=simple
+
+MAILGUN_API_KEY=your-mailgun-api-key-here
+MAILGUN_DOMAIN=your-mailgun-domain-here
+MAILGUN_FROM_EMAIL=your-mailgun-from-email-here
