feat: fixed db issues

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ SECRET_KEY=your-secret-key-here
 # Database
 DATABASE_URL=sqlite:///briefen_me.db
 
+# Database Pool Settings (optional - only override if needed)
+# Defaults in config.py are: pool_size=10, max_overflow=20, pool_recycle=300
+# DB_POOL_SIZE=10
+# DB_MAX_OVERFLOW=20
+# DB_POOL_RECYCLE=300
+
 # Gemini AI API Key
 GEMINI_API_KEY=your-gemini-api-key-here
 
