chore: remove test files from PR per owner request

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,23 @@ dependencies = [
     "gunicorn>=21.2.0",
     "qrcode[pil]>=7.4.2",
 ]
+
+[tool.black]
+line-length = 120
+
+[tool.isort]
+profile = "black"
+line_length = 120
+
+[tool.flake8]
+max-line-length = 120
+per-file-ignores = [
+    "app/services/ai_service.py:E501",
+    "app/services/web_scraper.py:E501",
+    "app/services/email_service.py:E501",
+    "app/services/slug_generator.py:E501",
+]
+
+[tool.ruff]
+line-length = 120
+extend-ignore = ["E203", "W503"]
