--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,6 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "gunicorn>=21.2.0",
     "qrcode[pil]>=7.4.2",
+    "flask-cors>=6.0.1",
+    "pyjwt>=2.10.1",
 ]
