chore: update example env

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ GCS_BUCKET_NAME=your-gcs-bucket-name
 GCS_PROJECT_ID=your-gcs-project-id
 # Path to service account JSON key (or set GOOGLE_APPLICATION_CREDENTIALS env var)
 GCS_CREDENTIALS_FILE=
-IP_HASH_SALT=
+IP_HASH_SALT=briefen-default-salt-change-in-production
 
 PORT=5001
 FLASK_DEBUG=false
